--- a/notritionVendorsAPP/View/Base.lproj/ItemInShop.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/ItemInShop.storyboard
@@ -23,6 +23,9 @@
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RFH-h6-IyM" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="n7d-VZ-80x"/>
+                                        </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="45Z-6E-Nop">
                                         <rect key="frame" x="10" y="160" width="355" height="35"/>
@@ -34,10 +37,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="vPc-RX-tzk">
-                                        <rect key="frame" x="10" y="205" width="355" height="60"/>
+                                        <rect key="frame" x="0.0" y="205" width="375" height="60"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TgP-MX-hYg">
-                                                <rect key="frame" x="0.0" y="0.0" width="355" height="60"/>
+                                                <rect key="frame" x="10" y="0.0" width="355" height="60"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mXf-6C-uK1">
                                                         <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
@@ -49,7 +52,10 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7i-DN-1e8">
-                                                        <rect key="frame" x="0.0" y="30" width="355" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="30" width="355" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="30" id="aKR-Gx-JqC"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" red="0.057144024046622742" green="0.64623651649746194" blue="0.011706839402197222" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -72,10 +78,15 @@
                                                     <constraint firstItem="d7i-DN-1e8" firstAttribute="leading" secondItem="TgP-MX-hYg" secondAttribute="leading" id="qCn-97-fhA"/>
                                                     <constraint firstAttribute="trailing" secondItem="mXf-6C-uK1" secondAttribute="trailing" id="rO1-OR-AOq"/>
                                                     <constraint firstItem="ROL-pA-tsZ" firstAttribute="top" secondItem="TgP-MX-hYg" secondAttribute="top" id="rvD-30-ABG"/>
+                                                    <constraint firstAttribute="height" constant="60" id="szB-SL-lj6"/>
                                                     <constraint firstItem="d7i-DN-1e8" firstAttribute="top" secondItem="mXf-6C-uK1" secondAttribute="bottom" id="yrs-Wx-njr"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="TgP-MX-hYg" secondAttribute="trailing" constant="10" id="OOe-Ze-swa"/>
+                                            <constraint firstItem="TgP-MX-hYg" firstAttribute="leading" secondItem="vPc-RX-tzk" secondAttribute="leading" constant="10" id="i1P-ny-jM7"/>
+                                        </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="RuH-wO-APP">
                                         <rect key="frame" x="10" y="275" width="355" height="30"/>
@@ -110,8 +121,8 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="RuH-wO-APP" secondAttribute="trailing" constant="10" id="2wO-zA-7y1"/>
-                                    <constraint firstAttribute="height" constant="318" id="8pH-MP-NTF"/>
                                     <constraint firstAttribute="trailing" secondItem="45Z-6E-Nop" secondAttribute="trailing" constant="10" id="CCG-Yo-UB4"/>
+                                    <constraint firstItem="vPc-RX-tzk" firstAttribute="width" secondItem="xtN-Wd-zBa" secondAttribute="width" id="PTL-EW-2nx"/>
                                     <constraint firstItem="RuH-wO-APP" firstAttribute="leading" secondItem="xtN-Wd-zBa" secondAttribute="leading" constant="10" id="bQp-E7-a2P"/>
                                     <constraint firstItem="45Z-6E-Nop" firstAttribute="leading" secondItem="xtN-Wd-zBa" secondAttribute="leading" constant="10" id="z9n-II-p1i"/>
                                 </constraints>
@@ -133,6 +144,9 @@
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qcd-Vf-aS7" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="0.0" width="80" height="81.5"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="80" id="45G-Iv-h1u"/>
+                                                            </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="MOI-5l-rrt">
                                                             <rect key="frame" x="95" y="0.0" width="260" height="81.5"/>
@@ -212,6 +226,7 @@
                         <outlet property="shopTimeOpen" destination="El8-40-DuP" id="dVO-dy-SGd"/>
                         <outlet property="tableView" destination="gtc-JA-WnO" id="bQH-Di-dj9"/>
                         <segue destination="4hu-EF-E0a" kind="show" identifier="ItemInShopToMap" id="852-q7-F5x"/>
+                        <segue destination="i5a-29-VHj" kind="show" identifier="ItemInShopToDetailItem" id="hfx-6g-ycM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ojp-9l-IHM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -226,13 +241,13 @@
             </objects>
             <point key="canvasLocation" x="1348" y="-124"/>
         </scene>
-        <!--Storyboard Reference-->
+        <!--DetailFoodStoryboardID-->
         <scene sceneID="Gxq-ej-uab">
             <objects>
-                <viewControllerPlaceholder id="i5a-29-VHj" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="DetailFood" referencedIdentifier="DetailFoodStoryboardID" id="i5a-29-VHj" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jY7-Nt-w3I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1380" y="89"/>
+            <point key="canvasLocation" x="1382" y="167"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ryp-hM-SaW">
