--- a/notritionVendorsAPP/View/Base.lproj/ItemInShop.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/ItemInShop.storyboard
@@ -127,9 +127,8 @@
                                     <constraint firstItem="45Z-6E-Nop" firstAttribute="leading" secondItem="xtN-Wd-zBa" secondAttribute="leading" constant="10" id="z9n-II-p1i"/>
                                 </constraints>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gtc-JA-WnO">
-                                <rect key="frame" x="0.0" y="391" width="375" height="276"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gtc-JA-WnO">
+                                <rect key="frame" x="0.0" y="382" width="375" height="285"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ItemInShopCell" rowHeight="102" id="ewI-ai-xFA" customClass="ItemInShopCell" customModule="notritionVendorsAPP" customModuleProvider="target">
@@ -210,8 +209,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="xtN-Wd-zBa" firstAttribute="top" secondItem="QDZ-LX-m0l" secondAttribute="top" id="14S-Sb-6pC"/>
+                            <constraint firstItem="gtc-JA-WnO" firstAttribute="leading" secondItem="QDZ-LX-m0l" secondAttribute="leading" id="MdL-xy-QK2"/>
                             <constraint firstItem="xtN-Wd-zBa" firstAttribute="trailing" secondItem="QDZ-LX-m0l" secondAttribute="trailing" id="Ox3-Lg-PRF"/>
+                            <constraint firstItem="gtc-JA-WnO" firstAttribute="top" secondItem="xtN-Wd-zBa" secondAttribute="bottom" id="PzS-PP-i2v"/>
+                            <constraint firstItem="gtc-JA-WnO" firstAttribute="top" secondItem="xtN-Wd-zBa" secondAttribute="bottom" id="Rrl-k6-CyJ"/>
                             <constraint firstItem="xtN-Wd-zBa" firstAttribute="leading" secondItem="QDZ-LX-m0l" secondAttribute="leading" id="dHw-1u-n7M"/>
+                            <constraint firstItem="gtc-JA-WnO" firstAttribute="bottom" secondItem="QDZ-LX-m0l" secondAttribute="bottom" id="hWT-mZ-0Pm"/>
+                            <constraint firstItem="gtc-JA-WnO" firstAttribute="trailing" secondItem="QDZ-LX-m0l" secondAttribute="trailing" id="uIR-H4-Xci"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="QDZ-LX-m0l"/>
                     </view>
